Fixe overflow issue + h4 position

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -26,6 +26,9 @@
     .about_text--italic {
       font-style: italic;
     }
+    h4 {
+      margin-right: 75px;
+    }
   }
 }
 // Versions tablettes et web
